--- a/BossReigns/BossReigns.csproj
+++ b/BossReigns/BossReigns.csproj
@@ -20,8 +20,14 @@
     <Reference Include="CursedBrambles">
       <HintPath>..\..\..\Cursed Brambles\Project\CursedBrambles\bin\Release\net452\CursedBrambles.dll</HintPath>
     </Reference>
-    <Reference Include="HamstarHelpers">
-      <HintPath>..\..\..\Mod Helpers\Project\HamstarHelpers\bin\Release\net452\HamstarHelpers.dll</HintPath>
+    <Reference Include="ModLibsCore">
+      <HintPath>..\..\..\Mod Libs\Mod Libs Core\Project\ModLibsCore\bin\Release\net452\ModLibsCore.dll</HintPath>
+    </Reference>
+    <Reference Include="ModLibsGeneral">
+      <HintPath>..\..\..\Mod Libs\Mod Libs General\Project\ModLibsGeneral\bin\Release\net452\ModLibsGeneral.dll</HintPath>
+    </Reference>
+    <Reference Include="ModLibsInterMod">
+      <HintPath>..\..\..\Mod Libs\Mod Libs Services Inter-Mod\Project\ModLibsInterMod\bin\Release\net452\ModLibsInterMod.dll</HintPath>
     </Reference>
     <Reference Include="Orbs">
       <HintPath>..\..\..\Orbs\Project\Orbs\bin\Release\net452\Orbs.dll</HintPath>
